--- a/css/utilities.css
+++ b/css/utilities.css
@@ -53,12 +53,12 @@
 }
 
 /* Flex columns */
-
 .flex-columns .row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+    margin-top: 30px;
     margin-bottom: 30px;
 }
 
@@ -72,14 +72,22 @@
 .flex-columns .column .column-1,
 .flex-columns .column .column-2 {
     height: 100%;
-    border-left: 5px solid #fff;
-    border-right: 5px solid #fff;
+}
+
+.flex-columns .column .column-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .flex-columns img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    display: block;
+    width: 80%;
+    height: 80%;
+    border-radius: 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .flex-columns .column-2 {
@@ -90,10 +98,6 @@
     padding: 30px;
 }
 
-.flex-columns h3 {
-    font-size: 25px;
-    margin-bottom: 15px;
-}
 
 .flex-columns p {
     margin: 20px 0;
