responsiveness and details

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -17,15 +17,17 @@
     background-color: #384c63;
     border: none;
     border-radius: 5px;
-    /* width: 150px; */
 }
-.btn-light, .bg-light {
+
+.btn-light,
+.bg-light {
     background: #c7b8ab;
     color: #384c63;
 }
 
-.btn-dark, .bg-dark {
-    background: #384c63;
+.btn-dark,
+.bg-dark {
+    background: #333;
     color: #fff;
 }
 
@@ -48,7 +50,7 @@
     height: 100%;
 }
 
-.flex-items > div {
+.flex-items>div {
     padding: 20px;
 }
 
@@ -56,7 +58,6 @@
 .flex-columns .row {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     width: 100%;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -78,7 +79,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .flex-columns img {
@@ -87,7 +87,7 @@
     height: 80%;
     border-radius: 50px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+    min-width: 300px;
 }
 
 .flex-columns .column-2 {
@@ -98,7 +98,6 @@
     padding: 30px;
 }
 
-
 .flex-columns p {
     margin: 20px 0;
 }
@@ -108,6 +107,6 @@
 }
 
 .flex-columns.flex-reverse .row .column-2 {
-align-items: flex-end;
-text-align: right;
+    align-items: flex-end;
+    text-align: right;
 }
