--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,9 @@ body {
     line-height: 1.6em;
     background-color: #fff;
     color: #444852;
-    /* scroll-behavior: smooth; */
+    scroll-behavior: smooth;
     font-size: 16px;
+
 }
 
 ul {
@@ -62,40 +63,47 @@ img {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* background: #F4F9FE; */
-    color: #fff;
+    background: #fff;
+    color: #333;
+    opacity: 0.8;
     width: 100%;
     height: 70px;
     position: fixed;
     top: 0px;
-    padding: 0 30px;
+    padding: 55px 30px;
 }
 
 .navbar ul {
     display: flex;
 }
 
-.navbar a,
-.navbar h1 {
+.navbar ul a {
     padding: 10px 20px;
     margin: 0 5px;
-    color: #fff;
+    color: #333;
 }
 
-.navbar a:hover {
-    border-bottom: #fff 2px solid;
+.navbar ul a:hover {
+    border-bottom: #333 2px solid;
 }
 
-.navbar .logo {
-    font-weight: 800;
+.navbar .logo img {
+    max-height: 110px;
+    max-width: 200px;
+    height: auto;
+    width: auto;
+    margin: 10px 20px;
+    padding-top: 20px;
 }
 
 /* Header */
 .hero {
-    background: url('../img/hero2.jpg') no-repeat center center/cover;
+    background: url('../img/hero.jpg') no-repeat center center/cover;
     height: 90vh;
     position: relative;
     color: #fff;
+    background-size: cover;
+    background-position: center;
 }
 
 .hero .about {
@@ -103,14 +111,12 @@ img {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    /* text-align: center; */
     height: 100%;
-    padding: 0 20px;
-    /* max-width: 700px; */
+    padding: 90px 20px 20px;
 }
 
 .hero .about h1 {
-    font-size: 60px;
+    font-size: 40px;
     margin: 0 20px 10px;
 }
 
@@ -122,7 +128,6 @@ img {
     margin: 0 20px;
 }
 
-.hero .about h1,
 .hero .about p {
     max-width: 70%;
 }
@@ -134,18 +139,21 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.8);
 }
 
 .hero * {
     z-index: 10;
 }
 
-.navbar,
+.navbar {
+    z-index: 20;
+}
+
 .icons,
 .experience,
 .contact {
-    padding: 60px 20px;
+    padding: 150px 20px;
 }
 
 /* Icons */
@@ -161,15 +169,15 @@ img {
     color: #fff;
 }
 
-
 /* Contact form */
-
 .flex-columns .column-info,
 .flex-columns .column-form {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     height: 100%;
+    min-width: 350px;
 }
 
 .box {
@@ -182,6 +190,7 @@ img {
 .contact-info {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin: 20px;
 }
 
@@ -192,6 +201,7 @@ img {
 .contact-form {
     width: 80%;
 }
+
 .contact-form label {
     display: block;
     margin-bottom: 5px;
@@ -214,21 +224,108 @@ img {
     height: 170px;
 }
 
+/* Footer */
+.footer {
+    min-height: 240px;
+}
 
+.footer p {
+    text-align: center;
+    font-size: 13px;
+    margin: 0;
+    padding: 20px
+}
 
-/* Colors */
-.color1 {
+.footer a {
+    padding: 20px;
     color: #fff;
 }
 
-.color2 {
-    color: #444852;
+.footer a:hover {
+    color: #c7b8ab;
 }
 
-.color3 {
-    color: #384c63;
+.flex-columns .company {
+    min-width: 150px;
 }
 
-.color4 {
-    color: #9ebef5;
+/* Responsive */
+@media screen and (max-width: 900px) {
+
+    .flex-columns.flex-reverse .row,
+    .flex-columns .row {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .flex-columns .row .column-2,
+    .flex-columns.flex-reverse .row .column-2 {
+        align-items: center;
+        text-align: center;
+    }
+
+    .flex-columns .box {
+        padding-top: 60px;
+    }
+
+    .footer .row {
+        margin: 0;
+    }
+
+    .flex-items {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 170px;
+        padding: 0;
+    }
+
+    .navbar .logo img {
+        height: auto;
+        width: auto;
+        padding: 0;
+        margin: 0;
+    }
+
+    .icons,
+    .experience,
+    .contact {
+        padding: 200px 20px;
+    }
+
+    .hero {
+        height: 95vh;
+    }
+
+    .hero .about {
+        padding: 190px 20px 20px;
+    }
+
+    .hero .about h1 {
+        font-size: 30px;
+    }
+
+    .hero .about p {
+        font-size: 14px;
+    }
+
+    .hero .about h1,
+    .hero .about p {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .contact-info h3 {
+        font-size: 16px;
+    }
 }
